fix: 🐛 fix icon size too small

--- a/examples/App.css
+++ b/examples/App.css
@@ -1,8 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 .background {
   position: absolute;
   left: 0;
